# OGLFramework_uulm

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  OGLFramework_uulm_2.sln  README.md
OGLFramework_uulm/: OGLFramework_uulm.vcxproj  constants.h  cudamain.h  main.cpp  main.h  oglErrorHandling.cpp  patternsConfig.xml
OGLFramework_uulm/app/: ApplicationBase.cpp  ApplicationBase.h  BaseGLWindow.cpp  BaseGLWindow.h  Configuration.cpp  Configuration.h  FWApplication.cpp  FWApplication.h  GLWindow.cpp  GLWindow.h
OGLFramework_uulm/app/gui/: DialogManager.cpp  DialogManager.h  GUIButton.cpp  GUIButton.h  GUICheckbox.cpp  GUICheckbox.h  GUIElement.cpp  GUIElement.h  GUIElementSizeable.cpp  GUIElementSizeable.h  GUIInputText.cpp  GUIInputText.h  GUILabel.cpp  GUILabel.h  GUILayout.cpp  GUILayout.h  GUIRadioButtonGroup.cpp  GUIRadioButtonGroup.h  GUISlider.cpp  GUISlider.h  GUITheme.cpp  GUITheme.h  GUIThemeManager.cpp  GUIThemeManager.h  GridLayout.cpp  GridLayout.h  GroupLayout.cpp  GroupLayout.h  HorizontalFlowLayout.cpp  HorizontalFlowLayout.h  VerticalFlowLayout.cpp  VerticalFlowLayout.h  gui_info.h
OGLFramework_uulm/core/: Arcball.cpp  Arcball.h  FontManager.cpp  FontManager.h  GPUProgramManager.cpp  GPUProgramManager.h  MaterialLibManager.cpp  MaterialLibManager.h  Resource.cpp  Resource.h  ResourceManager.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h  VolumeManager.cpp  VolumeManager.h  boost_helper.cpp  boost_helper.h  cudaLogger.cpp  cudaLogger.h  g2logWrapper.h  regex_helper.h
OGLFramework_uulm/core/g2log/: active.cpp  active.h  crashhandler.h  crashhandler_win.cpp  g2future.h  g2log.cpp  g2log.h  g2logworker.cpp  g2logworker.h  g2moveoncopy.hpp  g2time.cpp  shared_queue.h
OGLFramework_uulm/core/math/: math.h  primitives.h
OGLFramework_uulm/core/math/gte/: GteDCPQuery.h  GteDistSegmentSegment.h
OGLFramework_uulm/gfx/: CameraView.cpp  CameraView.h  FreeFormObjects.h  Material.cpp  Material.h  MaterialLibrary.cpp  MaterialLibrary.h  Mesh.cpp  Mesh.h  OBJMesh.cpp  OBJMesh.h  OrthogonalView.cpp  OrthogonalView.h  SpotLight.cpp  SpotLight.h  SubMesh.cpp  SubMesh.h  SubMeshMaterialChunk.h  Vertices.h  font_metrics.h
OGLFramework_uulm/gfx/glrenderer/: Font.cpp  Font.h  FrameBuffer.cpp  FrameBuffer.h  GLBatchRenderTarget.cpp  GLBatchRenderTarget.h  GLRenderTarget.cpp  GLRenderTarget.h  GLTexture.cpp  GLTexture.h  GLTexture2D.cpp  GLTexture2D.h  GLTexture3D.cpp  GLTexture3D.h  GLUniformBuffer.cpp  GLUniformBuffer.h  GLVertexAttributeArray.cpp  GLVertexAttributeArray.h  GPUProgram.cpp  GPUProgram.h  GUIRenderable.cpp  GUIRenderable.h  MeshRenderable.cpp  MeshRenderable.h  Renderable.cpp  Renderable.h  ScreenQuadRenderable.cpp  ScreenQuadRenderable.h  ScreenText.cpp  ScreenText.h  Shader.cpp  Shader.h  ShaderBufferBindingPoints.cpp  ShaderBufferBindingPoints.h  ShaderBufferObject.cpp  ShaderBufferObject.h  ShaderMeshAttributes.cpp  ShaderMeshAttributes.h  SimpleQuadRenderable.cpp  SimpleQuadRenderable.h
OGLFramework_uulm/gfx/postprocessing/: BloomEffect.cpp  BloomEffect.h  FilmicTMOperator.cpp  FilmicTMOperator.h
OGLFramework_uulm/gfx/volumes/: VolumeBrickOctree.cpp  VolumeBrickOctree.h  VolumeCubeRenderable.cpp  VolumeCubeRenderable.h
OGLFramework_uulm/gpgpu/: CUDAAddNoise.cu  CUDAAddNoise.h  CUDAGrid.cu  CUDAGrid.h  CUDAImage.cpp  CUDAImage.h
OGLFramework_uulm/resources/: Arial.fnt  combineChildTextures16.cp  combineChildTextures32.cp  combineChildTextures8.cp  defaultGUI.xml  genMinMaxMipMaps16.cp  genMinMaxMipMaps32.cp  genMinMaxMipMaps8.cp  genMinMaxTexture16.cp  genMinMaxTexture32.cp  genMinMaxTexture8.cp  renderCubeCoordinates.fp  renderCubeCoordinates.vp  renderGUI.vp  renderText.fp  renderText.gp  renderText.vp  renderVolume.fp  renderVolume.vp  simple.fp  simple.vp  tfPicker.fp  tfPicker.vp  tfRenderGUI.fp  tfRenderGUI.vp
OGLFramework_uulm/resources/shader/: lights.glsl  screenQuad.vp
OGLFramework_uulm/resources/shader/tm/: blurBloom.cp  combineBloom.cp  filmic.fp  glareDetect.cp
OGLFramework_uulm/scene/: ArcballRotatedSceneRenderable.cpp  ArcballRotatedSceneRenderable.h  SceneRenderable.cpp  SceneRenderable.h
OGLFramework_uulm/volumeScene/: TransferFunction.cpp  TransferFunction.h  TransferFunctionGUI.cpp  TransferFunctionGUI.h
